# kindlepics

./: README.md  app.py  db.py  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml  test_app.py
.github/: dependabot.yml
.github/workflows/: deploy.yml  teardown.yml  test.yml
