[project]
name = "kindlepics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mangum (>=0.19.0,<0.20.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "dropbox (>=12.0.2,<13.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]

[tool.poetry]
package-mode = false

[virtualenvs]
in-project = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
mypy = "^1.15.0"
ruff = "^0.11.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
